# plasma-ai-usage-monitor

./: .clang-tidy  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  Justfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  com.github.loofi.aiusagemonitor.metainfo.xml  install.sh  plasma-ai-usage-monitor.spec  plasma_applet_com.github.loofi.aiusagemonitor.notifyrc
.copilot/: mcp-config.json
.github/: copilot-instructions.md  dependabot.yml  labeler.yml
.github/agents/: architecture-advisor.md  backend-builder.md  code-implementer.md  frontend-integration-builder.md  project-coordinator.md  release-planner.md  test-writer.md  workflow-orchestrator.agent.md
.github/instructions/: cplusplus.instructions.md
.github/workflows/: build.yml  c-cpp.yml  config-drift.yml  release.yml
build-local/: CTestTestfile.cmake  DartConfiguration.tcl  ecm_uninstall.cmake  install_manifest.txt  prefix.sh
build-local/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-local/plugin/: CTestTestfile.cmake
build-local/plugin/tests/: CTestTestfile.cmake  test_history_mapping_regression  test_usagedatabase_series
docs/ways-of-work/plan/quality-engineering/cpp-unit-test-coverage-expansion/: implementation-plan.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: CompactRepresentation.qml  CostSummaryCard.qml  FullRepresentation.qml  MultiSeriesChart.qml  ProviderCard.qml  SubscriptionToolCard.qml  TrendSummary.qml  UsageChart.qml  Utils.js  configAlerts.qml  configBudget.qml  configGeneral.qml  configHistory.qml  configProviders.qml  configSubscriptions.qml  main.qml
packaging/flatpak/: README.md  com.github.loofi.aiusagemonitor.yaml
plan/: feature-test-coverage-expansion-1.md
plugin/: CMakeLists.txt  aiusageplugin.cpp  aiusageplugin.h  anthropicprovider.cpp  anthropicprovider.h  appinfo.cpp  appinfo.h  browsercookieextractor.cpp  browsercookieextractor.h  claudecodemonitor.cpp  claudecodemonitor.h  clipboardhelper.h  codexclimonitor.cpp  codexclimonitor.h  cohereprovider.cpp  cohereprovider.h  copilotmonitor.cpp  copilotmonitor.h  deepseekprovider.cpp  deepseekprovider.h  googleprovider.cpp  googleprovider.h  googleveoprovider.cpp  googleveoprovider.h  groqprovider.cpp  groqprovider.h  mistralprovider.cpp  mistralprovider.h  openaicompatibleprovider.cpp  openaicompatibleprovider.h  openaiprovider.cpp  openaiprovider.h  openrouterprovider.cpp  openrouterprovider.h  providerbackend.cpp  providerbackend.h  qmldir  secretsmanager.cpp  secretsmanager.h  subscriptiontoolbackend.cpp  (+9 more)
plugin/tests/: CMakeLists.txt  test_history_mapping_regression.cpp  test_providerbackend.cpp  test_providers_mocked_http.cpp  test_subscription_tools.cpp  test_subscriptiontoolbackend.cpp  test_updatechecker.cpp  test_usagedatabase_extended.cpp  test_usagedatabase_series.cpp
scripts/: check_flatpak_scaffold.sh  check_no_hardcoded_versions.sh  check_version_consistency.sh  install_bootstrap.sh  install_doctor.sh  install_local_plasmoid.sh  package_plasmoid.sh  package_source_tarball.sh  reload_plasma.sh  run_clang_tidy_ci.sh  show_installed_versions.sh
